--- a/test/index.html
+++ b/test/index.html
@@ -13,8 +13,11 @@
         <content>
             <h1 class="code">mindiff_layout.js</h1>
             <p>Layout of expendable elements on an interger grid with minimal differences.</p>
-            <h2>Demo</h2>
+            
+            <h2>News</h2>
+            <p><span class="new-date">10/02/2020</span> code in progress</p>
 
+            <h2>Demo</h2>
             <p class="grid-title"><b>4</b> elements of size <b>1</b> in a <b>3</b> wide grid</p class="grid-title">
             <div class="grid grid-3">
                 <div class="cell-1">A</div>
